<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/player1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrez_le_nom_du_joueur_1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/joueur_1"
        android:textColorHint="@color/cardview_dark_background"
        android:inputType="text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/player2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrez_le_nom_du_joueur_2"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/joueur_2"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
